<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFD5B5"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/wbtn2"
        android:layout_width="286dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/wbtn2"
        android:textColor="#FBF9F9"
        android:textSize="28sp"
        app:backgroundTint="#61B303"
        app:cornerRadius="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wbtn1"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/title001"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/title001"
        android:textColor="#0B0808"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/logo1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="128dp"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/logo1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo3"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/title002"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/title002"
        android:textColor="#090707"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/logo1"
        app:layout_constraintTop_toBottomOf="@+id/title001" />

    <ImageView
        android:id="@+id/welcome1"
        android:layout_width="211dp"
        android:layout_height="554dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/welcome1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo1"
        app:srcCompat="@drawable/wel8"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tiltle003"
        android:layout_width="188dp"
        android:layout_height="211dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/tiltle003"
        android:textColor="#130E0E"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/welcome1"
        app:layout_constraintTop_toBottomOf="@+id/title002" />

    <Button
        android:id="@+id/wbtn1"
        android:layout_width="274dp"
        android:layout_height="63dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/wbtn1"
        android:textColor="#FBF9F9"
        android:textSize="28sp"
        app:backgroundTint="#61B303"
        app:cornerRadius="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiltle003"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>