<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:contentDescription="@string/weatherbg"
    tools:context=".WeatherScreen1">

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/weatherfind"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        app:srcCompat="@drawable/finding" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="402dp"
        android:layout_height="174dp"
        android:layout_above="@+id/cityFinder"
        android:contentDescription="@string/weatherLlayout"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherIcon">

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingLeft="30dp"
            android:text="@string/weathertxt1"
            android:textColor="#053336"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/weatherCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30sp"
            android:paddingLeft="30sp"
            android:text="@string/weathertxt2"
            android:textColor="#053336"
            android:textSize="30sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/cityName"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:paddingStart="30sp"
            android:paddingLeft="30sp"
            android:text="@string/weathertxt3"
            android:textColor="#053336"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/cityFinder"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="#61B303"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.213">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/weathertxt4"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:itemBackground="@color/apple_green100"
        app:itemIconSize="@dimen/bottom_navigation_icon_size"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu" />
</androidx.constraintlayout.widget.ConstraintLayout>
