<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupOption">

    <ImageView
        android:id="@+id/wel2back2"
        android:layout_width="421dp"
        android:layout_height="812dp"
        android:contentDescription="@string/wel2back1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wel4" />

    <TextView
        android:id="@+id/wel2text8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/wel2text3"
        android:textColor="#F3EFEF"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welimage3" />

    <ImageView
        android:id="@+id/welimage3"
        android:layout_width="404dp"
        android:layout_height="422dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/welimage2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/white" />

    <TextView
        android:id="@+id/wel2text7"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/abeezee"
        android:gravity="center"
        android:text="@string/wel2text2"
        android:textColor="#494545"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wel2btn5" />

    <Button
        android:id="@+id/wel2btn5"
        android:layout_width="334dp"
        android:layout_height="71dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/wel2btn2"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:backgroundTint="#61B303"
        app:cornerRadius="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wel2btn4"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/wel2btn4"
        android:layout_width="325dp"
        android:layout_height="73dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/wel2btn1"
        android:textColor="#FBF9F9"
        android:textSize="28sp"
        android:textStyle="bold"
        app:backgroundTint="#61B303"
        app:cornerRadius="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wel2text6"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/wel2text6"
        android:layout_width="320dp"
        android:layout_height="53dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/wel2text1"
        android:textColor="#101010"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welimage3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="145dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/wel2back1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo3" />
</androidx.constraintlayout.widget.ConstraintLayout>