<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="6dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="6dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="15dp">

        <ImageView
            android:id="@+id/shopr_image"
            android:layout_width="88dp"
            android:layout_height="71dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="19dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/shopr_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/shopr_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/shopr_image"
            android:text="@string/shopr_name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/shopr_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shopr_name"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/shopr_image"
            android:text="@string/shopr_desc"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/shopr_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shopr_desc"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/shopr_image"
            android:text="@string/shopr_loc"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/shopr_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shopr_loc"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/shopr_image"
            android:text="@string/shopr_no"
            android:textColor="@color/black"
            android:textSize="25sp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>